@@ -1,5 +1,5 @@
-c664aa63a7d317bdd74483211546f5c2 *ChangeLog
-5f2faf3b7fed17e0f0081ed73cbc26de *DESCRIPTION
+739ccd0fd1f4c184eb2fc49dbd2a448f *ChangeLog
+521c4a5c7b0c9aabe3f357e9374b3a1a *DESCRIPTION
 1642f4d7984913c091c1a5109d8bd4ce *LICENSE
 6ec660c4f331c870e424940bb663e6f2 *NAMESPACE
 071861570100940ecf1d312115564603 *R/00-classes.r
@@ -12,13 +12,13 @@ a2e5803486a013e92894bf74601ef099 *R/process.r
 9ea001f97d998afc05ecb23a7d875f14 *R/rgutenberg.r
 4cd2db40fa944b2c3c6a4d4581805658 *R/utils.r
 04ab9f7016082ddf2bc03cc070083fc1 *README
-b3b6c06e106bac165dadb9793c678b26 *build/vignette.rds
+d97d51e05734245cdba57701df97de7b *build/vignette.rds
 373026805f493c2ae95d224dd3a7b396 *cleanup
 e4afc29c01fae21726df51e2a244798e *demo/00Index
 796efb2e99473a1a5947d47080b7b342 *demo/demo.r
-b2b978de0d6e6e14c17dfe87701a7a76 *inst/CITATION
-85a9747240e5686842f734b47a01e154 *inst/doc/ngram-guide.Rnw
-e7f2232157d9a6d58d4552d15cc05f86 *inst/doc/ngram-guide.pdf
+766a493965bef6a4fd2c8c877e175779 *inst/CITATION
+8cdedcb17fc50606ea10c2bc8a775269 *inst/doc/ngram-guide.Rnw
+90d6dcec0d13db0912011e3789a93244 *inst/doc/ngram-guide.pdf
 dc69885df1e4a95fba3e880ad018aaa3 *man/00-ngram-package.Rd
 55af20124c5223dc512c6ffdde4a6beb *man/01-ngram-class.Rd
 8167c07d7e71c6fe0888893ef8cae088 *man/aa-utils.Rd
@@ -27,7 +27,7 @@ cdfca6f39bf492f255ebf0a19f4f0a6f *man/ab-preprocess.Rd
 0a25c5060d590522f9cc4e0cf7355fe5 *man/db-print.Rd
 fa443d8edbf1c7618e60bfb8e74f40f1 *man/dc-extract.Rd
 85a0015ff373bdaa23181e95c72c52b6 *man/ga-babble.Rd
-22709187bd395e36860baff52ce0de46 *src/Makevars
+4f4b89c078953aab42091fddf8f5245b *src/Makevars
 6d83a9e60224caccef66f5c11e3bf7df *src/constructor.c
 a3c0d6f49aa496c1c9c009d6f1ec523d *src/converters.c
 deb7bc8c15638fb8852151ed72b46514 *src/count.c
@@ -40,21 +40,20 @@ a7a739526027c1d5699a3c8a24ebf49f *src/ngram/Makefile
 d41d8cd98f00b204e9800998ecf8427e *src/ngram/README
 29dd618932433fd5f6a876df4c896dbc *src/ngram/TODO
 f036a951a5f7b39eb790b3c2c8318735 *src/ngram/mk
-db1a697a1a5ea2daf1c381ba557bee22 *src/ngram/src/counts.c
+b47837d1be68924661437648853c0d10 *src/ngram/src/counts.c
 49f78e5e24bfdcc284f8b01748fa828b *src/ngram/src/gen.h
-d41d8cd98f00b204e9800998ecf8427e *src/ngram/src/gen_check.c
-6f8dd5f2892c71b258e6b32ca6553fdb *src/ngram/src/gen_noalloc2.c
-e978b474c1eaefe1818d0042f25add2e *src/ngram/src/hash.c
+3714187b08b57eb1be2c921260d4def2 *src/ngram/src/gen_noalloc2.c
+3bb3ca79899ab4917331653a1761ef7d *src/ngram/src/hash.c
 567b4299db5f1b792dfe0b6e1629a3b6 *src/ngram/src/hash.h
 e95a2dd0ffc66dc9f91e90be17bbee32 *src/ngram/src/io.c
-664eccdfc9c4b660d1fcf42572da5ed9 *src/ngram/src/lex.c
+88976973c1f5f29a8af68675ab8bf8dc *src/ngram/src/lex.c
 f76e9212908d5256ab087c81206ba90d *src/ngram/src/lex.h
 91d3b8b4b8848ff1f2ce861009a075f6 *src/ngram/src/main.c
-771c785b5879591cabb8167af07d435f *src/ngram/src/print.c
+faa1cf2cfa6b284857c631e75988ad67 *src/ngram/src/print.c
 88009bb7bf88ebe3aeeb05ee3804edc8 *src/ngram/src/print.h
-8864f4d4e69eeb082b603bcd3e0c77c3 *src/ngram/src/process.c
+aee82e6640da85b9c1a97ce8460c210a *src/ngram/src/process.c
 9de602b1910950ae830b9329475f149a *src/ngram/src/process.h
-ce23de255f50d8c8a509585bf903b312 *src/ngram/src/rand/get_seed.c
+57836d11e46eabc5f8b57fcced3eff0a *src/ngram/src/rand/get_seed.c
 dd6ec68c30438ea1659ececd41fd17d0 *src/ngram/src/rand/mrg/rand_mrg.c
 64e5a183e5aab26753101dad93984869 *src/ngram/src/rand/mrg/rand_mrg.h
 8a08a61fdffd52e7a7dedb247ddf3d98 *src/ngram/src/rand/mt/rand_mt.c
@@ -64,22 +63,21 @@ d4c3ba8da520b1b03f8d8e7e98a3896c *src/ngram/src/rand/mt/rand_mt.h
 687aaad728e1b03b4ff6fab03eb48b4a *src/ngram/src/rand/rng_interface.c
 a26370945add67278be0def6f5b86551 *src/ngram/src/rand/rng_interface.h
 fd9ea31707fdb02394ce842acd66b8ad *src/ngram/src/rand/samplers.c
-4adc8e0a28aa8088b3ba9ad59f7d82c9 *src/ngram/src/wordcmp.c
+eb13e25252c944ae86d2016ecf41a07d *src/ngram/src/wordcmp.c
 54756efa2fe43d0f53dad4ae1bbb02ae *src/ngram/src/wordcmp.h
-d41d8cd98f00b204e9800998ecf8427e *src/print.c
 cfb54ceb5e046bad6f44f02497f3767b *tests/run
 ad915acad58dff02255ce744119dd230 *tests/valgrind.r
 f165ff66dcf6a617e270d5b704c834b9 *vignettes/build_pdf.sh
 a095dbb8a961722c34b24fa8bd8c6128 *vignettes/cover/build_cover.sh
 4a7a38dc1deda4410346037737d5127f *vignettes/cover/cover.dvi
-a0b8bbfb958c062d67732abfaf2459b3 *vignettes/cover/cover.pdf
-b5544c79f1ca6cbbe752cbd88ce1f0b5 *vignettes/cover/cover.tex
+070d57033b65f39e32fd8fdfb07b50d8 *vignettes/cover/cover.pdf
+3a88f15461c9bc159451c262861a4784 *vignettes/cover/cover.tex
 1807691e44add3696c635277e05936c4 *vignettes/cover/hydra.png
-3511e2a44b42e523895e48c6b67aa08e *vignettes/include/00-copyright.tex
-766b8e9314e6e94c399f368d5685aa0a *vignettes/include/01-introduction.tex
-485c9957d3e47f9d9bb578dcaf74a645 *vignettes/include/02-installation.tex
-1799bc1ff62baef7e806943b6c6dd5e1 *vignettes/include/03-use.tex
+b2f6131948f38bc1a1c8c5ef39bfea88 *vignettes/include/00-copyright.tex
+fdd427b2ad9d3e31706f16aa5e3227c2 *vignettes/include/01-introduction.tex
+c212176938d7e5824270cf417d107266 *vignettes/include/02-installation.tex
+b66bc31c060ba3b4cfe47c8c73f09297 *vignettes/include/03-use.tex
 c361b262c34785162574e5dcd1fc559b *vignettes/include/pics/uch_small.png
-00e1804ebe968bed531cd8cbfefb0d4b *vignettes/include/preamble.tex
+4bbbd6a192e4957cbac2a132c85182f6 *vignettes/include/preamble.tex
 77d0c1a38b9e639ac92e19e817e4c633 *vignettes/include/titlepage.tex
-85a9747240e5686842f734b47a01e154 *vignettes/ngram-guide.Rnw
+8cdedcb17fc50606ea10c2bc8a775269 *vignettes/ngram-guide.Rnw
