@@ -1,11 +1,10 @@
 #######################################################
 
 #PKG_LIBS = ngram/libngram.a
-#PKG_CFLAGS = -Wall -g
+#PKG_CFLAGS = -Wall #-g
 
 NGRAM_OBJS = \
 	ngram/src/counts.o \
-	ngram/src/gen_check.o \
 	ngram/src/gen_noalloc2.o \
 	ngram/src/hash.o \
 	ngram/src/lex.o \
