@@ -2,7 +2,7 @@
                        %Jean-C\^ome Charpentier 2005
 
 % Compile with XeLaTeX
-\newcommand{\thispackageversion}{1.0}
+\newcommand{\thispackageversion}{1.1}
 
 
 \usepackage[margin=0.5in]{geometry}
@@ -32,5 +32,5 @@
 \end{pspicture}
 
 \vfill\noindent
-\ \hfill {\large\textsl{Drew Schmidt}}
+\ \hfill {\large\textsl{Drew Schmidt and Christian Heckendorf}}
 \end{document}
