@@ -1,6 +1,6 @@
 \null
 \vfill
-\copyright\ 2014 Drew Schmidt.
+\copyright\ 2014 Drew Schmidt and Christian Heckendorf.
 
 Permission is granted to make and distribute verbatim copies of
 this vignette and its source provided the copyright notice and
