@@ -21,7 +21,7 @@ That is, we take the input string and group the ``words'' 2 at a time (because
 each n-gram (and their frequency), then we can generate new text which has the 
 same statistical properties as the input.
 
-The \thispackage package an \R package for constructing n-grams and generating 
-new text as described above.  It also contains a few utilities to aid in this 
-process.  Additionally, the \C code underlying this library can be compiled as 
-a standalone shared library.
+The \thispackage package is an \R package for constructing n-grams and generating 
+new text as described above.  It also contains a few preprocessing utilities to 
+aid in this process.  Additionally, the \C code underlying this library can be 
+compiled as a standalone shared library.
