@@ -8,10 +8,11 @@ In this section, we will describe the various ways that one can install the
 \subsection{Installing from Source}
 
 The sourcecode for this package is available (and actively maintained) on 
-GitHub.  To install this (or any other) package from source on Windows, you will 
+GitHub.  To install an \R package from source on Windows, you will 
 need to first install the 
 \href{http://cran.r-project.org/bin/windows/Rtools/Rtools216.exe}{Rtools} 
-package.
+package.  To install an \R package from source on a Mac, you will need to install
+the latest Xcode, which you can get from the App store.
 
 The easiest way to install \thispackage from GitHub is via the 
 \href{http://cran.r-project.org/web/packages/devtools/index.html}%
