@@ -1,3 +1,7 @@
+2014-06-23:
+  * Fixed some package issues.
+  * Clarified some statements in the vignette.
+
 ======================= Log Before Release =====================================
 
 2014-06-22:
